<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Play_button">Play/Pause</string>
    <string name="Menu">|||</string>
    <string name="song_title">West Coast</string>
    <string name="artist">Lana Del Ray</string>
    <string name="playlist">^^ Swipe up to see playlist.</string>
    <string name="profile">Emily_Cul</string>
    <string name="my_playlists">My Playlists</string>
    <string name="mood_statisitcs">Mood Statistics</string>
    <string name="recently_played">Recently played</string>
    <string name="suggested_albums">Suggested albums</string>
    <string name="suggested_songs">Suggested Songs</string>
    <string name="welcome">Welcome!</string>
    <string name="trending_now">Trending now</string>
    <string name="favourites">Favourites</string>
    <string name="listen_later">Listen later</string>
    <string name="text1_popup">Now the application will be able to detect your mood and automatically
    create the perfect playlist that matches your vibe!</string>
    <string name="text2_popup">But First:</string>
    <string name="text3_popup">Activate the camera and look straight at it for 5 seconds because as we all know our mood is always written
    all over our face!</string>
    <string name="text4_popup">Give the application access to your microphone since the tone of your voice
    also reveals your feelings!</string>
    <string name="text5_popup">Allow access to your microphone:</string>
    <string name="text6_popup">Allow access to your camera:</string>
    <string name="text7_popup">Connect the application to your smart-watch as your heartbeat will provide useful information
    for your current state!</string>
    <string name="text8_popup">Connect your smart-watch:</string>
    <string name="text9_popup">Are you ready to enjoy this unique experience?</string>
    <string name="let_me">Let me listen</string>
    <string name="search">Search song here</string>
    <string-array name="event_type">
        <item>Choose event types</item>
        <item>Full-on Party</item>
        <item>Date</item>
        <item>Informal Gathering</item>
        <item>Formal Gathering</item>
    </string-array>
    <string name="more_party">Hip Hop party!</string>
    <string name="party_type">Party type:Full-on party</string>
    <string name="playlist_title">Playlist</string>
    <string name="home_menu">Home</string>
    <string name="search_menu">Search</string>
    <string name="listening_now_menu">Listening now</string>
    <string name="profile_menu">Profile</string>
    <string name="DJ_menu">DJ</string>
    <string name="menu">MENU</string>
    <string name="dark_mode">Dark mode</string>
    <string name="equalizer">Equalizer</string>
    <string name="connected_devices">Connected devices</string>
    <string name="social_media">Link your social media accounts</string>
    <string name="permissions">Permissions</string>
    <string name="about">About</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="play_now_title">Playing now in party:</string>
    <string name="more_party2">How the party has gone so far!</string>
    <string name="more_party3">Congratulations!Great party!</string>
    <string name="suggestion_title">Member Suggestions</string>
    <string name="rec">Recommendations</string>
    <string name="add">Add song</string>
    <string name="exit">Exit DJ-mode</string>
    <string name="more">More about your party</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="playlists">Playlists</string>
    <string name="cancel">Cancel</string>
    <string name="textview">TextView</string>
    <string name="insert">Insert number of participants</string>
    <string name="import_play">Import Existing Playlist</string>
    <string name="selected_item">Selected item:</string>
    <string name="feel">You activated FEEL ME mode</string>
    <string name="start">Start</string>
    <string name="feel_me">Feel me</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>