<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="680dp"
    android:layout_marginTop="25dp"
    android:background="@color/black"
    tools:context=".fragments.side_menu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white">
    </TextView>


    <View
        android:id="@+id/divider_menu"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="70dp"
        android:background="#03A9F4" />

    <Switch
        android:id="@+id/switch5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="20dp"
        android:text="@string/dark_mode"
        android:textColor="#FAF6F6"
        android:checked="true"
        android:clickable="false"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/black"
        android:textColorLink="@color/white"
        android:layout_marginStart="205dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equalizer"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="85dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginStart="5dp">
    </TextView>

    <View
        android:id="@+id/divider_menu1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="130dp"
        android:background="#60686C" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="145dp"
        android:text="@string/connected_devices"
        android:textColor="@color/white"
        android:textSize="20sp">
    </TextView>

    <View
        android:id="@+id/divider_menu2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="190dp"
        android:background="#60686C" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="205dp"
        android:text="@string/social_media"
        android:textColor="@color/white"
        android:textSize="20sp">
    </TextView>

    <View
        android:id="@+id/divider_menu3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="250dp"
        android:background="#60686C" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="265dp"
        android:text="@string/permissions"
        android:textColor="@color/white"
        android:textSize="20sp">
    </TextView>

    <View
        android:id="@+id/divider_menu4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="310dp"
        android:background="#60686C" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="325dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="20sp">

    </TextView>

    <View
        android:id="@+id/divider_menu5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="370dp"
        android:background="#60686C" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="385dp"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="20sp">

    </TextView>

    <View
        android:id="@+id/divider_menu6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="430dp"
        android:background="#60686C" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/sign_out"
        android:layout_marginTop="480dp"
        android:layout_marginLeft="105dp"
        android:layout_marginStart="105dp">

    </Button>

</FrameLayout>