<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/black"
    android:layout_height="match_parent"
    android:layout_width="400dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:text="You activated FEEL ME mode"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/text1_popup"
        android:textSize="17sp"
        android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/text2_popup"
            android:textStyle="italic"
            android:textSize="17sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="220dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/text3_popup"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="295dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/text6_popup"
            android:textStyle="italic"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="295dp"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textOff="No"
            android:textOn="Yes"
            android:text="No"
            android:textColor="#FAF6F6"
            android:textColorHighlight="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="330dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/text4_popup"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="405dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/text5_popup"
            android:textStyle="italic"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="405dp"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textOff="No"
            android:textOn="Yes"
            android:text="No"
            android:textColor="#FAF6F6"
            android:textColorHighlight="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="440dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/text7_popup"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="515dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/text8_popup"
            android:textStyle="italic"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <Switch
            android:id="@+id/switch4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="515dp"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textOff="No"
            android:textOn="Yes"
            android:text="No"
            android:textColor="#FAF6F6"
            android:textColorHighlight="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="570dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="25dp"
            android:textAlignment="center"
            android:text="@string/text9_popup"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/purple_200"
            android:gravity="center_horizontal" />

        <Button
            android:id="@+id/button_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="680dp"
            android:layout_marginLeft="130dp"
            android:text="Let's GO!"
            android:textSize="18sp" />
    </RelativeLayout>
</ScrollView>