<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:background="@color/black">


    <View
        android:id="@+id/divider_artists_dj"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="130dp"
        android:background="#60686C" />

    <Button
        android:id="@+id/song_button2_dj"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/black"
        tools:targetApi="lollipop"
        android:text="@string/songs">

    </Button>

    <Button
        android:id="@+id/artists_button2_dj"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="150dp"
        android:text="@string/artists"
        android:backgroundTint="@color/black"
        tools:targetApi="lollipop"
        android:layout_marginStart="150dp">

    </Button>

    <Button
        android:id="@+id/playlists_button2_dj"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="290dp"
        android:text="@string/playlists"
        android:backgroundTint="@color/black"
        tools:targetApi="lollipop"
        android:layout_marginStart="290dp">

    </Button>






    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_results_artists_dj"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="140dp" />


    <EditText
        android:id="@+id/searchbar_artists_dj"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="15dp"
        android:width="1dp"
        android:color="#00000000"
        android:hint="@string/search"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:drawableRight="@drawable/ic_baseline_mic_24"/>




    <Button
        android:id="@+id/search_icon_artists_dj"
        android:layout_width="50dp"
        android:layout_height="39dp"
        android:layout_marginLeft="277dp"
        android:layout_marginTop="15dp"
        android:background="#03DAC5"
        android:contentDescription="TODO"
        android:visibility="visible"
        app:icon="@drawable/ic_search" />








</RelativeLayout>