<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_results_songs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="140dp" />

    <View
        android:id="@+id/divider_songs"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="130dp"
        android:background="#60686C" />

    <Button
        android:id="@+id/song_button1"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/black"
        tools:targetApi="lollipop"
        android:text="@string/songs">

    </Button>

    <Button
        android:id="@+id/artists_button1"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="140dp"
        android:text="@string/artists"
        android:backgroundTint="@color/black"
        tools:targetApi="lollipop"
        android:layout_marginStart="140dp">

    </Button>

    <Button
        android:id="@+id/playlists_button1"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="270dp"
        android:text="@string/playlists"
        android:backgroundTint="@color/black"
        tools:targetApi="lollipop"
        android:layout_marginStart="270dp">

    </Button>








</RelativeLayout>