<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.More_about_party"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="700dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="10dp"
            android:text="@string/more_party"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="170dp"
            android:background="#03A9F4" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="10dp"
            android:text="@string/party_type"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="240dp">

            <TextView
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Number of upvotes/downvotes"
                android:textColor="#03A9F4"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="208dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="Party members:"
                android:textColor="#03A9F4"
                android:textSize="19sp"
                android:textStyle="bold" />

        </TableRow>

        <TextView
            android:id="@+id/people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="295dp"
            android:text="98"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/abc_vector_test"
            android:backgroundTint="@android:color/holo_green_dark"
            android:rotation="90" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="315dp"
            android:text="47"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="380dp"
            android:background="@drawable/abc_vector_test"
            android:backgroundTint="@android:color/holo_red_dark"
            android:rotation="-90" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="390dp"
            android:text="11"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="40sp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="500dp"
            android:layout_marginLeft="10dp"
            android:text="@string/more_party2"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="530dp"
            android:background="#03A9F4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="760dp"
            android:layout_marginLeft="30dp"
            android:text="@string/more_party3"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <com.anychart.AnyChartView
            android:id="@+id/party_pie"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="550dp"
            />


    </RelativeLayout>

</ScrollView>